# Newtown

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  SETUP.md  browsing-whitelist.txt  characters.example.json  characters.json  package.json  restart-lain.sh  restart-wired.sh  start.ps1  start.sh  stop.ps1  stop.sh  tsconfig.json  vitest.config.ts
deploy/: backup-dbs.sh  deploy.sh  generate-services.sh  healthcheck.sh  setup-nginx.sh  setup-systemd.sh  status.sh
docs/: TEST-SUITE.md
scripts/: backfill-findings.py  dream-seed.sh  generate-newspaper.py  quick-setup.ts  split-sisters.sh
services/voice-call/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/voice-call/scripts/: setup_telegram.py
services/voice-call/src/lain_voice/: __init__.py  config.py  main.py
services/voice-call/src/lain_voice/api/: __init__.py  routes.py  websocket.py
services/voice-call/src/lain_voice/audio/: __init__.py  converter.py  stt.py  tts.py
services/voice-call/src/lain_voice/call/: __init__.py  conversation.py  manager.py
services/voice-call/src/lain_voice/telegram/: __init__.py  call_handler.py  client.py
src/: index.ts
test/: .coverage-catalog.json  .coverage-gaps.md  agent-content.test.ts  agent-features.test.ts  agent-loops.test.ts  agent-pipeline.test.ts  anti-regression.test.ts  api-contracts.test.ts  boundary-values.test.ts  browser-curiosity-behavioral.test.ts  browser-system.test.ts  building-memory-resilience.test.ts  channels-behavioral.test.ts  channels.test.ts  character-isolation.test.ts  chroma-memory-mirror.test.ts  cli-behavioral.test.ts  cli-system.test.ts  client-ip-trust.test.ts  commune-deep.test.ts  commune.test.ts  concurrency-races.test.ts  config-system.test.ts  e2e.test.ts  (+109 more)
(+391 files in other folders)
